--- a/handouts/day-3.tex
+++ b/handouts/day-3.tex
@@ -163,7 +163,7 @@ Visualize and compare all Fourier transformed functions of dipole and velocities
 
 \begin{Exercise}[label={imaginarytime},title={Velocity imaginary time correlation function}]
 
-In this exercise, we will calculate an example of an imaginary time correlation function, namely the velocity-velocity imaginary time correlation. These quantities are exact withing the PI formalism and can be computed from PIMD, CMD, RPMD, and TRPMD, always yielding the same result since all these methods preserve ensemble. A direct estimator for the imaginary time correlation function on the imaginary time $i \lambda_j$, with $\lambda_j=j\beta_P\hbar$, $j=0,...,n-1$, and $\lambda_n=\lambda_0$ is
+In this exercise, we will calculate an example of an imaginary time correlation function, namely the velocity-velocity imaginary time correlation. These quantities are exact within the PI formalism and can be computed from PIMD, CMD, RPMD, and TRPMD, always yielding the same result since all these methods preserve ensemble. A direct estimator for the imaginary time correlation function on the imaginary time $i \lambda_j$, with $\lambda_j=j\beta_P\hbar$, $j=0,...,n-1$, and $\lambda_n=\lambda_0$ is
 
 \begin{equation}
 c_{vv}(i \lambda_j ) = \sum_k^N \left[ \frac{3}{\beta_P m_k} - \frac{\omega_P}{P} \sum_i^{P-1} \langle (\mathbf{q}_i^{(k)}-\mathbf{q}_{i+1}^{(k)})(\mathbf{q}_{i+j}^{(k)}-\mathbf{q}_{i+j+1}^{(k)}) \rangle\right].
