--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -12,7 +12,7 @@
 
 % INTRO
 In this set of exercises we will learn about the basics of \ipi\ and
-its use jointly with \qe.  
+its use jointly with \qe.
 
 As may be already clear, \ipi\ is not meant to compute forces. Thus,
 an external engine is needed. Once the external engine is set, \ipi\
@@ -66,7 +66,7 @@ pw.x --ipi host:port < pw.in
 The forces are then computed by \pwx\ at the level specified in the
 input and passed to \ipi\ thought the socket interface.
 
-\Question 
+\Question
 Open the \ipi\ input file \url{ex-1/ipi.xml}. Specifying in
 the input which is the address of the socket where \ipi\ will wait for a \pwx\
 instance is essential. You have two possibilities: using a UNIX-domain
@@ -84,7 +84,7 @@ in the \url{ex-1/ipi.xml}:
 </ffsocket>
 \end{lstlisting}
 Edit the file replacing the dots with appropriate values. Any string
-would be fine but, if you 
+would be fine but, if you
 want to be consistent with the rest of the tutorial, you should use
 the following:
 \begin{table}[h!]
@@ -148,11 +148,11 @@ following command after replacing the \texttt{unix\_address} with the
 actual address where \ipi\ is waiting (if followed tutorial
 suggestions, this should be \texttt{pw-forces}):
 \begin{lstlisting}[language=bash]
-pw.x --ipi unix_address:UNIX < pw.in 
+pw.x --ipi unix_address:UNIX < pw.in
 \end{lstlisting}
 
 
-\Question 
+\Question
 Now switch to the terminal where \ipi\ is running, notice
 that \ipi\ has built the connection with \pwx:
 \begin{lstlisting}[language=sh]
@@ -169,10 +169,10 @@ whether \ipi\ is still running.  Notice that although the evolution of
 MD is paused, \ipi\ itself does not die off but instead continue to
 run and wait for new client to take over.  Now start \pwx\ again using
 the previous command.
-What happens to \ipi\ now?  \ldots Nice eh? 
+What happens to \ipi\ now?  \ldots Nice eh?
 
 
-\Question 
+\Question
 What if one stops \ipi ?  Kill \ipi\ by typing \url{Ctrl+c}
 where it is running, or create a file named \url{EXIT} in the folder
 where \ipi\ is running (you can use the bash command \texttt{touch
@@ -184,7 +184,7 @@ unexpectedly.
 \Question
 Checking the \texttt{<initialization>} node in the \ipi\ input, we see
 the attribute \texttt{nbeads=4}. This means that we are running a Path
-Integral Molecular Dynamics (PIMD) simulation with 4 beads. Easy, isn't it?. 
+Integral Molecular Dynamics (PIMD) simulation with 4 beads. Easy, isn't it?.
 This explain why \ipi\ is producing so many xyz files as output. There
 is an output for each bead and a fifth file containing the trajectory
 of the centroid. You can open them all together with the following
@@ -213,7 +213,7 @@ Try to focus also on the \texttt{<output>} node and understand why
 
 
 When you are tired of looking at a single molecule of water, go to the
-next exercise. 
+next exercise.
 
 MD simulations are quite computationally expensive and performing
 simulation with \emph{ab-initio} force evaluation would require much
@@ -234,7 +234,7 @@ Open the \ipi\ input file at \url{ex-2/ipi.xml} and localize the node
 describing the thermostat. The attribute \texttt{mode} of the
 thermostat is set to \texttt{langevin}. The PIGLET thermostat needs
 some parameter that can be downloaded from the following website
-\url{https://epfl-cosmo.github.io/gle4md/index.html?page=matrix}. 
+\url{https://epfl-cosmo.github.io/gle4md/index.html?page=matrix}.
 To obtain the right parameters do the following:
 \begin{enumerate}
 \item Select \texttt{PIGLET} as \textbf{GLE type};
@@ -264,13 +264,13 @@ Change the \texttt{verbosity} value from \texttt{medium} to
 \begin{lstlisting}[language=bash]
 i-pi ipi.xml
 \end{lstlisting}
-from the \url{ex-2-piglet} folder. 
+from the \url{ex-2-piglet} folder.
 
 At this point you have two choices for the force provider: you start
 \PWscf\ or LAMMPS. Since this simulation contains 96 atoms, we warmly
 suggests using LAMMPS in this test running the following command:
 \begin{lstlisting}[language=bash]
-lmp_serial -i in.water 
+lmp_serial -i in.water
 \end{lstlisting}
 in a different shell. While the simulation is running, in order to
 understand better the \ipi\ machinery, you could prepare a \pwx\ input
@@ -302,7 +302,7 @@ strongly suggest to run the same dynamics using the langevin thermostat and a
 single bead (classical dynamics).
 Let both run while working on the next exercise. We
 will come back to these at the end of the tutorial to analyze some
-result. 
+result.
 
 At this point, you should know \ipi\ well enough to
 proceed with the next simulation without much help. Pay attention to
@@ -338,7 +338,7 @@ Look at the following snippet:
 This section of the input tells \ipi\ that the computation we want to
 perform is a molecular \texttt{dynamics}, in the \texttt{nvt} ensemble
 using a \texttt{langevin thermostat} and a \texttt{timestep} of 0.25
-femtosecond. 
+femtosecond.
 
 There is also another important section:
 \begin{lstlisting}[language=xml]
@@ -353,7 +353,7 @@ defined within the \texttt{ensemble} node.
 
 \Question
 Add a barostat. You can follow the user guide to understand how to
-set-up the barostat. The following snippet provide a general setup
+set-up the barostat. Anyway, the following snippet provide a general setup
 which is suitable for this case.
 \begin{lstlisting}[language=xml]
 <barostat mode='isotropic'>
@@ -368,10 +368,29 @@ Where is the place for this node? The \texttt{barostat} is a
 characteristic of the \texttt{dynamics} itself. Then it must be
 specified within that node. Copy the snippet above just before the
 \texttt{<timestep>} node.
-      
+
+
+\Question What if we want to perform an NPT simulation with an
+anisotropic barostat? This kind of simulations need an extension of
+the NPT ensemble, called NST (constant-temperature,
+constant-stress). Thus, in \ipi\ set the attribute \texttt{mode} of
+the \texttt{dynamic} node to \texttt{nst}. This means also that the
+\texttt{<ensemble>} node must contain a stress tensor instead of an
+isotropic pressure. To simulate our system with an anisotropic cell at
+atmospheric pressure, use the following snippet inside the
+\texttt{<ensamble>} node:
+\begin{lstlisgin}[language=xml]
+<stress units='megapascal'> [10, 0, 0, 0, 10, 0, 0, 0, 10] </stress>
+\end{lstlisgin}
+The stress is a 3x3 tensor. To simplify user's life, this kind of tensors are 
+flatten in the \ipi input.
+
+At this point the input is ready to perform a simulation with at
+``constant anisotropic pressure''.
+
 \Question
 What does the list \texttt{h0} contains? Why do we need a thermostat
-within the barostat? 
+within the barostat?
 
 The list of numbers is a reference cell for the Parrinello-Rahman
 barostat (which is the one implemented in \ipi). In practice, those
@@ -382,7 +401,7 @@ contains also the units of length for the cell and the positions
 (\texttt{cell\{angstrom\}} and \texttt{position\{angstrom\}}).
 
 \Question
-Following the same command used in the last exercise, start this
+Following the same procedure used in the last exercise, start this
 simulation.
 
 \end{Exercise}
@@ -393,7 +412,7 @@ function obtained from the two simulation of exercise 2.
 
 \Question
 Compute radial distribution functions for the different simulations. You
-can use any tool of your liking, but we suggest the \url{trajworks} 
+can use any tool of your liking, but we suggest the \url{trajworks}
 post-processing tool that is part of the \url{toolbox} library.
 Run the following command in the two folders used during the exercise
 2: \url{ex-2} and \url{ex-2-piglet}.
