--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -16,12 +16,12 @@ its use jointly with \qe.
 
 As may be already clear, \ipi\ is not meant to compute forces. Thus,
 an external engine is needed. Once the external engine is set, \ipi\
-will take care of the generation of the MD trajectory. This approach
+takes care of the generation of the MD trajectory. This approach
 is extremely flexible. For example different kind of forces can be
 mixed within \ipi\ permitting the use of forces coming from different
 sources: correcting terms from different software (\PWscf~+ external
 dispersion correction) or multiple time step approaches with
-expansive/cheap forces computations (see the Ring Polymer Contraction
+expensive/cheap forces computations (see the Ring Polymer Contraction
 method).
 
 \begin{figure}[h!]
@@ -34,7 +34,7 @@ method).
 \end{figure}
 
 
-The next exercises are created to increase the confidence of the user
+The following exercises are created to increase the confidence of the user
 with the \ipi\ workflow and to clarify the server/client approach on
 which the \ipi-engine communication protocol is based (see
 fig. \ref{fig:ipi-scheme}). Moreover, you will understand how to
@@ -44,9 +44,9 @@ Integral Molecular Dynamics efficiency.
 \begin{Exercise}[label={i-pi},title={Molecular Dynamics: a client/server approach}]
 
 In this exercise, we will perform a simple Molecular Dynamics (MD)
-calculation using \PWscf\ as engine. Since QM forces computation is
-expansive, here we use a single molecule of water in gas phase. Moreover, the
-\PWscf\ input is prepared sacrificing the accuracy to run faster.
+calculation using \PWscf\ as engine. Since the computation of QM forces is
+expensive, here we use a single molecule of water in gas phase. Moreover, the
+\PWscf\ input is prepared sacrificing its accuracy to run faster.
 
 The simulation will be performed using the NVT ensemble at 300K.  We
 will also record the kinetic and potential energy and the conserved
@@ -63,19 +63,20 @@ when calling the software (see section 3.6 of PWscf user's manual).
 \begin{lstlisting}[language=bash]
 pw.x --ipi host:port < pw.in
 \end{lstlisting}
-The forces are then computed by \pwx\ at the level specified in the
-input and passed to \ipi\ thought the socket interface.
+The forces are then computed by \pwx\ at the level of electron theory
+specified in the input and passed to \ipi\ thought the socket
+interface.
 
 \Question
 Open the \ipi\ input file \url{ex-1/ipi.xml}. Specifying in
 the input which is the address of the socket where \ipi\ will wait for a \pwx\
 instance is essential. You have two possibilities: using a UNIX-domain
 or an INET-domain socket. The former is faster but the server and the
-client must run on the same machine. The latter allows communications
-going through the ``INTERNET'' so that \ipi\ and the ``force
-calculator'' can run on different computer.
+client must run on the same machine. The latter allows communication
+through the ``internet'' so that \ipi\ and the ``force
+calculator'' can run on a different computer.
 
-The following steps tell \ipi\ to wait for connection on the UNIX
+The following steps tell \ipi\ to wait for a client connecting on the UNIX
 socket called \texttt{single-water-qe}. Look for the following snippet
 in the \url{ex-1/ipi.xml}:
 \begin{lstlisting}[language=xml]
@@ -100,19 +101,19 @@ the following:
 double-quotes!}\\
 
 
-The \texttt{name} attribute in the \texttt{ffsocket} node assign a
+The \texttt{name} attribute in the \texttt{ffsocket} node assigns a
 reference to the forcefield within the \ipi\ input. This reference
 will be used to specify the origin of the force within the
 \texttt{system} node.
 
 \Question
-Introduce a \texttt{<force>} node that references to the
-\texttt{ffsocket} defined previously.
+Introduce a \texttt{<force>} node that references to the previously 
+ defined \texttt{<ffsocket>}.
 
 \ipi\ can manage different simulations at the same time. Each
 simulation is defined in the \texttt{<system>} node. Each
-\texttt{<system>} can also use forces coming from more than a single
-calculator. Since this is an introductory course, we are going to use
+\texttt{<system>} can also use forces coming from different 
+calculators. Since this is an introductory course, we are going to use
 a single system with a single force. In the file \url{ex-1/ipi.xml}
 look for the following snippet:
 \begin{lstlisting}[language=xml]
@@ -122,7 +123,7 @@ look for the following snippet:
 \end{lstlisting}
 Replace the three dots with the name of the forcefield you want to use
 to compute the forces in this system. If you used the names suggested
-in the tutorial, this should be \texttt{pw-forces}.
+in the tutorial, it should be \texttt{pw-forces}.
 
 \Question
 We are now ready to run the simulation.\\
@@ -139,7 +140,7 @@ Created unix socket with address single-water-qe
 @ForceField: Starting the polling thread main loop
 \end{lstlisting}
 this means that the server started correctly and is waiting for a
-client able to compute forces.
+client that computes forces.
 
 To start \pwx\ as an \ipi\ client open a new terminal, enter the
 folder \url{ex-1} and create a new directory. Enter the just
@@ -185,7 +186,7 @@ unexpectedly.
 Checking the \texttt{<initialization>} node in the \ipi\ input, we see
 the attribute \texttt{nbeads=4}. This means that we are running a Path
 Integral Molecular Dynamics (PIMD) simulation with 4 beads. Easy, isn't it?.
-This explain why \ipi\ is producing so many xyz files as output. There
+This explains why \ipi\ is producing so many xyz files as output. There
 is an output for each bead and a fifth file containing the trajectory
 of the centroid. You can open them all together with the following
 command:
@@ -194,7 +195,7 @@ vmd -m example*.xyz
 \end{lstlisting}
 You can also look at the \url{ex-1/example.out} file. This is the
 result of the \texttt{<property>} node. The header of the file
-summarize what is printed in each column. You can create a graph using
+summarizes what is printed in each column. You can create a graph using
 the following command:
 \begin{lstlisting}[language=bash]
 plot example.out -1,3
@@ -218,7 +219,7 @@ next exercise.
 MD simulations are quite computationally expensive and performing
 simulation with \emph{ab-initio} force evaluation would require much
 more time than what you can afford during this tutorial. This is why,
-from now on, the code LAMMPS will be used instead of \qe\. All the
+from now on, the code LAMMPS will be used instead of \qe. All the
 input for \qe\ will anyway be present in the exercise \texttt{run} folders.
 
 \vspace{2em}
@@ -232,8 +233,8 @@ the sampling.
 \Question
 Open the \ipi\ input file at \url{ex-2/ipi.xml} and localize the node
 describing the thermostat. The attribute \texttt{mode} of the
-thermostat is set to \texttt{langevin}. The PIGLET thermostat needs
-some parameter that can be downloaded from the following website
+thermostat is set to \texttt{langevin}. The PIGLET thermostat requires
+some parameters that can be downloaded from the following website
 \url{https://epfl-cosmo.github.io/gle4md/index.html?page=matrix}.
 To obtain the right parameters do the following:
 \begin{enumerate}
@@ -242,11 +243,11 @@ To obtain the right parameters do the following:
 \item The \textbf{Par. set} should be \texttt{Ns=8,
     $\hbar\omega/kT=20$, PIGLET}
 \item To get the output in the \ipi\ input form, select \ipi\ in the
-  \textbf{Ouptut format}.
+  \textbf{Output format}.
 \item All the other parameters are left to the default value.
 \end{enumerate}
-In this context, the \texttt{Ns} are the number of free degrees in the
-thermostat, $\omega_{max}$ and \texttt{centroid} are the maximum
+In this context, the \texttt{Ns} are the number of degrees of freedom
+of the bath, $\omega_{max}$ and \texttt{centroid} are the maximum
 and the window frequencies for which the sampling is
 enhanced. \textbf{Target T} is the temperature of the simulation and
 $\hbar\omega/KT$ is the ratio between vibrational energy and average
@@ -268,12 +269,12 @@ from the \url{ex-2-piglet} folder.
 
 At this point you have two choices for the force provider: you start
 \PWscf\ or LAMMPS. Since this simulation contains 96 atoms, we warmly
-suggests using LAMMPS in this test running the following command:
+suggest using LAMMPS in this test by running the following command:
 \begin{lstlisting}[language=bash]
 lmp_serial -i in.water
 \end{lstlisting}
 in a different shell. While the simulation is running, in order to
-understand better the \ipi\ machinery, you could prepare a \pwx\ input
+understand the \ipi\ machinery better, you could prepare a \pwx\ input
 for this example starting from the \pwx\ input provided in the folder
 \url{ex-1/pw.in}. Try also to run it with \ipi\ to be sure it's working.
 
@@ -298,15 +299,14 @@ LAMMPS could be used to maximize the performances?
 With this second exercise we performed a much more interesting
 simulation using some advanced method to increase the efficiency of
 the PIMD statistical sampling. Before moving to the next exercise, we
-strongly suggest to run the same dynamics using the langevin thermostat and a
-single bead (classical dynamics).
-Let both run while working on the next exercise. We
-will come back to these at the end of the tutorial to analyze some
-result.
+strongly suggest to run the same simulation using a white noise Langevin
+thermostat and a single bead (classical dynamics).  Let both run while
+working on the next exercise. We will come back to these at the end of
+the tutorial to analyze some results.
 
 At this point, you should know \ipi\ well enough to
 proceed with the next simulation without much help. Pay attention to
-the fact that only one \ipi\ instance can use a given socket at
+the fact that only one instance of \ipi\ can use a given socket at
 time. If you want to run two \ipi\ server at the same time, make sure
 they have a different \texttt{<address>} or, in the case of INET domain
 sockets, at least different \texttt{<port>}. At the end, you can look
@@ -323,7 +323,7 @@ in a valid input for a PIMD-NPT simulation.
 \Question
 Take a look at the input provided and identify the nodes responsible
 for the task \ipi\ will perform.
-\texttt{motion} is the most important node in this sense.
+\texttt{motion} is the most important node in this case.
 Look at the following snippet:
 \begin{lstlisting}[language=xml]
 <motion mode='dynamics'>
@@ -366,8 +366,8 @@ which is suitable for this case.
 \end{lstlisting}
 Where is the place for this node? The \texttt{barostat} is a
 characteristic of the \texttt{dynamics} itself. Then it must be
-specified within that node. Copy the snippet above just before the
-\texttt{<timestep>} node.
+specified within that node. Copy the snippet aforementioned and paste
+just before the \texttt{<timestep>} node.
 
 
 \Question What if we want to perform an NPT simulation with an
@@ -379,9 +379,9 @@ the \texttt{dynamic} node to \texttt{nst}. This means also that the
 isotropic pressure. To simulate our system with an anisotropic cell at
 atmospheric pressure, use the following snippet inside the
 \texttt{<ensamble>} node:
-\begin{lstlisgin}[language=xml]
+\begin{lstlisting}[language=xml]
 <stress units='megapascal'> [10, 0, 0, 0, 10, 0, 0, 0, 10] </stress>
-\end{lstlisgin}
+\end{lstlisting}
 The stress is a 3x3 tensor. To simplify user's life, this kind of tensors are 
 flatten in the \ipi input.
 
@@ -397,7 +397,7 @@ barostat (which is the one implemented in \ipi). In practice, those
 numbers are the dimension of the cell that must be written into the xyz
 input file (\url{ex3-1/init.xyz}) or in the pdb file (take as an
 example the one at \url{ex1/h2o-init.pdb}). The coordinate files
-contains also the units of length for the cell and the positions
+also contains the units of dimension of the cell and the positions
 (\texttt{cell\{angstrom\}} and \texttt{position\{angstrom\}}).
 
 \Question
@@ -417,24 +417,25 @@ post-processing tool that is part of the \url{toolbox} library.
 Run the following command in the two folders used during the exercise
 2: \url{ex-2} and \url{ex-2-piglet}.
 \begin{lstlisting}[language=bash]
-trajworks -ixyz -vbox -fstart 10 -gr -gr1 O -gr2 O \
+$read_box example-xc.xyz > box.dat%$
+$trajworks -ixyz -box box.dat -fstart 10 -gr -gr1 O -gr2 O \
         -grmax 5 -grbins 250 -hwin triangle -hwinfac 2 \
-         < example-xc.xyz > gOO.dat
+         < example-xc.xyz > gOO.dat%$
 \end{lstlisting}
 
 To visualize the result you can use the \texttt{plot} command from
 \url{ex-2-piglet} folder:
 \begin{lstlisting}[language=bash]
-plot gOO.dat ../ex-2/gOO.dat -1,2
+plot gOO.dat ../ex-2-langevin/gOO.dat -1,2
 \end{lstlisting}
 Also compute the O--H radial distribution function.
 Do you see any difference? Can you explain why?
 
 \end{Exercise}
 
-We hope this tutorial made you familiarize with the use if \ipi. You
-can find more tutorial an more information (as well as a link to the
-last development and stable versions at \url{http://ipi-code.org}~\cite{CP2K}.
+We hope this tutorial made you familiar with the use of \ipi. You
+can find more tutorials and more information (as well as a link to the
+last development and stable versions at \url{http://ipi-code.org}.
 
 % \noindent In this exercise we are going to familiarize ourselves with the important notations of \ipi\ input files.
 % Let"s take a look at the input files in the folder \url{ex-2}.
@@ -742,6 +743,6 @@ last development and stable versions at \url{http://ipi-code.org}~\cite{CP2K}.
 
 % \end{Exercise}
 
-\bibliographystyle{unsrt}
-\bibliography{biblio}
+%\bibliographystyle{unsrt}
+%\bibliography{biblio}
 \end{document}
