--- a/slides/tex/[PRES]-intro.tex
+++ b/slides/tex/[PRES]-intro.tex
@@ -8,7 +8,7 @@
    \item Written in Python
      \vspace{0.3cm}
    \item (not-only) with \emph{ab-initio}
-     force-evaluators 
+     force-evaluators
    \end{itemize}
    \column{0.4\textwidth}
    \includegraphics[width=\columnwidth]{ipi}
@@ -17,7 +17,7 @@
 
 \begin{frame}{How i-PI works}
   \includegraphics[width=\columnwidth]{ipi-scheme}
-  
+
   \begin{columns}
     \column{0.5\textwidth}
     \begin{block}{Goal}
@@ -55,9 +55,9 @@
 \begin{frame}
 Let's start the tutorial\ldots \\
 \vspace{2em}
-\ldots remember 
+\ldots remember
 I am here to answer your questions\ldots
-\end{fram}
+\end{frame}
 
 % \begin{frame}{The Ultimate Goal}
 %   \begin{columns}
@@ -84,7 +84,7 @@ I am here to answer your questions\ldots
 %     \includegraphics[width=\columnwidth]{intro/nano_solved}
 %   \end{columns}
 %   \setcounter{footnote}{1}\footnotetext{Petraglia, R.; Steinmann, S.;
-%     Corminboeuf, C.\hspace{.5em} \emph{Int. J. Quant. Chem.} 
+%     Corminboeuf, C.\hspace{.5em} \emph{Int. J. Quant. Chem.}
 %     \textbf{2015}, \emph{115}, 1265}
 %   \setcounter{footnote}{2}\footnotetext{Petraglia, R. \emph{et al.}
 %     \hspace{.5em}\emph{J. Comput. Chem.} \textbf{2016}, \emph{37}, 83}
@@ -104,7 +104,7 @@ I am here to answer your questions\ldots
 % systems. DFT-MD is computationally too expensive while MM is not able
 % to describe the charge mobility: Actually this property make these
 % systems so interesting since supramolecular complexes like this can be
-% used in organic electronic frameworks. 
+% used in organic electronic frameworks.
 
 % We want to go further a merely description of this systems: we want
 % understand which are the geometrical key factors (like distance,
@@ -120,7 +120,7 @@ I am here to answer your questions\ldots
 % straightforwardly applicable to DFTB scheme. After that we will
 % \textcolor{red}{the Verb is missing} the Block-localized wavefunction
 % scheme to DFTB in order to be able to use the Marcus-hush theory in
-% computing charge mobility. 
+% computing charge mobility.
 
 % To have a finer description of the electronic structure of our system,
 % we will provide DFT calculation. Nowadays DFT suffers from two
@@ -128,13 +128,10 @@ I am here to answer your questions\ldots
 % dispersion interactions. To minimize CDE and provide a correction for
 % dispersion interaction, we will \textcolor{red}{some verb} a new
 % functional based on the existing wB97 and the dDsC dispersion
-% correction recently developed at LCMD. 
+% correction recently developed at LCMD.
 
 % We assume that reaching this three major achievement will allow the
 % description of supramolecular systems organic electronics related and
 % the study of those factors able to control the charge mobility in the
 % systems.
 % }
-
-
-
