--- a/slides/tex/[PRES]-main.tex
+++ b/slides/tex/[PRES]-main.tex
@@ -283,15 +283,16 @@
 % \vspace{1ex}
 %  Corso di Laurea Magistrale in Scienze Chimiche
 % \vspace{1cm}
+  \raisebox{0.03cm}{\includegraphics[width=0.3\textwidth]{general/group-logo}}
 \begin{tabular}{cc}
 %  \hline
 %  \vspace{-0.1cm}
-  \raisebox{0.03cm}{\includegraphics[width=0.3\textwidth]{general/group-logo}} &
+  \raisebox{0.03cm}{\includegraphics[width=0.3\textwidth]{general/MAX-logo}} &
   \includegraphics[width=0.4\textwidth]{general/EPFL-logo-notext}
 \end{tabular}\\
 \vspace{1em}
 
-ICTP Trieste 
+ICTP Trieste
 }
 
 \date[26.01.2017]
@@ -327,7 +328,11 @@ ICTP Trieste
 \newcommand{\unilogo}{
   \setlength{\TPHorizModule}{1pt}
   \setlength{\TPVertModule}{1pt}
-   % textblock{}{x,y}: pos(x) = leftUpperCorner + (x * \TPHorizModule), pos(y) = leftUpperCorner - (y * \TPVertModule)
+   % textblock{}{x,y}: pos(x) = leftUpperCorner + (x *
+   % \TPHorizModule), pos(y) = leftUpperCorner - (y * \TPVertModule)
+  \begin{textblock}{1}(0.75,230)
+   \includegraphics[width=1.5cm]{general/MAX-logo}
+  \end{textblock}
   \begin{textblock}{1}(1,250)
    \includegraphics[width=1.5cm]{general/EPFL-logo}
   \end{textblock}
