small edits handout

--- a/handouts/handout.tex
+++ b/handouts/handout.tex
@@ -257,7 +257,7 @@ next exercise.
 MD simulations are quite computationally expensive and performing
 simulation with \emph{ab-initio} force evaluation would require much
 more time than you have during this tutorial. This is why,
-from now on, the code LAMMPS will be used instead of \qe. All the
+from now on, the code LAMMPS will be used. All the
 input for \qe\ will be present anyway in the exercise \texttt{-run} folders.
 
 \vspace{2em}
